--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pr-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +18,7 @@
                 <img src="./assets/wifi.png" alt="icone wifi" class="icone">
             </div>
         </div>
-        
+
         <div class="avatarhome">
             <img src="./assets/perfil-1.jpg" alt="foto de perfil-1" class="foto__avatar avatarhome__foto">
             <div class="avatarhome__texto">
@@ -33,7 +34,7 @@
 
         <div class="card1">
             <div class="card1__superior">
-               <img src="./assets/perfil-2.jpg" alt="foto luciana Dias" class="foto__avatar">
+                <img src="./assets/perfil-2.jpg" alt="foto luciana Dias" class="foto__avatar">
                 <div class="superior__texto">
                     <h2 class="texto__nome">Luciana Dias</h2>
                     <div class="superior__consulta">
@@ -43,7 +44,7 @@
                 </div>
 
                 <div>
-                    <div  class="superior__chat">
+                    <div class="superior__chat">
                         <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
                     </div>
                 </div>
@@ -58,6 +59,275 @@
             </div>
         </div>
 
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-3.jpg" alt="foto Larissa Santana" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Larissa Santana</h2>
+                    <div class="superior__consulta">
+                        <img src="./assets/pin.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta no local</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">16:00 - 17:00 (1 hora)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__endereco">Ver endereço</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-4.jpg" alt="foto Marcos Correia" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Marcos Correia</h2>
+                    <div class="superior__consulta">
+                        <img src="./assets/Camera.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta remota</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">17:20 - 18:00 (40 minutos)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__video">Ligar por vídeo</a>
+                    <a href="#" class="botao botao__audio">Ligar por áudio</a>
+                </div>
+            </div>
+        </div>
+
+        <h2 class="diasemana">Amanhã</h2>
+
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-5.jpg" alt="foto Clara Lemos" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Clara Lemos</h 2>
+                    <div class="superior__consulta">
+                        <img src="./assets/pin.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta no local</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">18:00 - 19:00 (1 hora)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__endereco">Ver endereço</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-2.jpg" alt="foto luciana Dias" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Luciana Dias</h2>
+                    <div class="superior__consulta">
+                        <img src="./assets/Camera.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta remota</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">14:00 - 15:00 (1 hora)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__video">Ligar por vídeo</a>
+                    <a href="#" class="botao botao__audio">Ligar por áudio</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-4.jpg" alt="foto Marcos Correia" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Marcos Correia</h2>
+                    <div class="superior__consulta">
+                        <img src="./assets/Camera.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta remota</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">17:20 - 18:00 (40 minutos)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__video">Ligar por vídeo</a>
+                    <a href="#" class="botao botao__audio">Ligar por áudio</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-3.jpg" alt="foto Larissa Santana" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Larissa Santana</h2>
+                    <div class="superior__consulta">
+                        <img src="./assets/pin.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta no local</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">16:00 - 17:00 (1 hora)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__endereco">Ver endereço</a>
+                </div>
+            </div>
+        </div>
+
+        <h2 class="diasemana">Quarta-feira</h2>
+
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-5.jpg" alt="foto Clara Lemos" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Clara Lemos</h 2>
+                    <div class="superior__consulta">
+                        <img src="./assets/pin.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta no local</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">18:00 - 19:00 (1 hora)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__endereco">Ver endereço</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-2.jpg" alt="foto luciana Dias" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Luciana Dias</h2>
+                    <div class="superior__consulta">
+                        <img src="./assets/Camera.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta remota</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">14:00 - 15:00 (1 hora)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__video">Ligar por vídeo</a>
+                    <a href="#" class="botao botao__audio">Ligar por áudio</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-4.jpg" alt="foto Marcos Correia" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Marcos Correia</h2>
+                    <div class="superior__consulta">
+                        <img src="./assets/Camera.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta remota</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">17:20 - 18:00 (40 minutos)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__video">Ligar por vídeo</a>
+                    <a href="#" class="botao botao__audio">Ligar por áudio</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card1">
+            <div class="card1__superior">
+                <img src="./assets/perfil-3.jpg" alt="foto Larissa Santana" class="foto__avatar">
+                <div class="superior__texto">
+                    <h2 class="texto__nome">Larissa Santana</h2>
+                    <div class="superior__consulta">
+                        <img src="./assets/pin.png" alt="icone camera">
+                        <p class="texto__consulta">Consulta no local</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="superior__chat">
+                        <img src="./assets/chat1.png" alt="icone chat" class="icone__chat">
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card1__inferior">
+                <p class="inferor__horario">16:00 - 17:00 (1 hora)</p>
+                <div class="inferior__botao">
+                    <a href="#" class="botao botao__endereco">Ver endereço</a>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
+
 </html>
